// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When using snapshots Should render with element children  1`] = `
<Default__StyledSpan>
  <Osmose
    className=""
    data={
      Object {
        "b_date": "2018-03-11",
        "elems": Array [
          Object {
            "fixes": Array [
              Object {
                "add": Array [
                  Object {
                    "k": "ref:UAI",
                    "v": "9710194J",
                    "vlink": "http://www.education.gouv.fr/pid24302/annuaire-resultat-recherche.html?lycee_name=9710194J",
                  },
                  Object {
                    "k": "school:FR",
                    "v": "primaire",
                  },
                  Object {
                    "k": "source",
                    "v": "data.gouv.fr:Éducation Nationale - 05/2016",
                  },
                ],
                "del": Array [],
                "mod": Array [],
                "num": 0,
              },
              Object {
                "add": Array [
                  Object {
                    "k": "ref:UAI",
                    "v": "9710194J",
                    "vlink": "http://www.education.gouv.fr/pid24302/annuaire-resultat-recherche.html?lycee_name=9710194J",
                  },
                  Object {
                    "k": "school:FR",
                    "v": "primaire",
                  },
                  Object {
                    "k": "source",
                    "v": "data.gouv.fr:Éducation Nationale - 05/2016",
                  },
                ],
                "del": Array [
                  "amenity",
                ],
                "mod": Array [
                  Object {
                    "k": "name",
                    "v": "École primaire Louis Andrea 1",
                  },
                ],
                "num": 1,
              },
            ],
            "id": 4685618649,
            "node": true,
            "tags": Array [
              Object {
                "k": "amenity",
                "v": "school",
              },
              Object {
                "k": "name",
                "v": "Collège Maurice SATINEAU",
              },
            ],
            "type": "node",
          },
        ],
        "elems_id": "node4685618649",
        "error_id": 16567871739,
        "item": 8031,
        "lat": "16.2601911",
        "lon": "-61.5922668",
        "maxlat": 16.2621911,
        "maxlon": -61.590266799999995,
        "minlat": 16.2581911,
        "minlon": -61.5942668,
        "new_elems": Array [],
        "subtitle": "École primaire Louis Andrea 1, RUE EUTROPE MARIAN, 97122, BAIE MAHAULT (positioned: building, matching: manual)",
        "title": "School, integration suggestion",
        "url_help": "http://wiki.openstreetmap.org/wiki/Osmose/errors",
      }
    }
    handleSuggestion={[MockFunction]}
    key=".0"
  >
    <div />
  </Osmose>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with empty tag data  1`] = `
<Default__StyledSpan>
  <Osmose
    className=""
    data={Object {}}
    handleSuggestion={[MockFunction]}
    key=".0"
  >
    <div />
  </Osmose>
</Default__StyledSpan>
`;

exports[`When using snapshots Should render with empty tag data  2`] = `
<Default__StyledSpan>
  <Osmose
    className=""
    data={
      Object {
        "elems": Array [],
        "new_elems": Array [],
      }
    }
    handleSuggestion={[MockFunction]}
    key=".0"
  >
    <div />
  </Osmose>
</Default__StyledSpan>
`;
